<resources>
    <string name="app_name">Food Scanner</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">923623198060710</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb923623198060710</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">FyQ7vAFoiw2aMD76G30lQV7Jx</string>
    <string name="twitter_consumer_secret" translatable="false">k6TuZ7VrQlE09T7EVcF1LNd7OSTxCPb1gEYTOfJ59go1nmLJXn</string>
    <string name="toc_url">https://my-pathshala.com/terms-and-conditions</string>
    <string name="privacy_policy_url">https://my-pathshala.com/privacy-policy</string>
    <string name="placeholder_btn_setup_allergy_profile">Add</string>
    <string name="pleceholder_sign_out">Sign Out</string>
    <string name="placeholder_sign_in">Sign In</string>
    <string name="placeholder_login_status">Hi, Deepak Ramalingam. Welcome.</string>
    <string name="placeholder_guest_user">Guest User, SignIn to scan the barcode.</string>
    <string name="placeholder_hi">Hi &#160;</string>
    <string name="placeholder_welcome">, Welcome.</string>
    <string name="exceptions_subtitle">Allergens, food additives and more</string>
    <string name="exceptions_title">Your Exceptions</string>
    <string name="placeholder_exceptions">Add Exception</string>
    <string name="placeholder_unknown_product">UnKnown Product</string>
    <string name="placeholder_unknown_product_message">Do you like to add this product ?</string>
    <string name="placeholder_add">Add</string>
    <string name="placeholder_update">Update</string>
    <string name="placeholder_delete">Delete</string>
    <string name="placeholder_modify_exceptions">Modify Exception</string>
    <string name="placeholder_cancel">Cancel</string>
    <string name="placeholder_ok">Ok</string>
    <string name="error_msg">Oops something went wrong.Please Try again later.</string>
    <string name="success_msg">Successfully Updated</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="title_product_found">Product Found</string>
    <string name="title_new_product">New Product</string>
    <string name="scan_note">Scan the ingredients from the product to auto fill</string>
    <string name="allergic_warning">This product is not good for you, it has ingredients which are allergic to you like, &#160;</string>
    <string name="no_allergic_warning">This product is safe for you, it doesnt have any ingredients which are allergic to you.</string>
    <string name="placeholder_scanning">Scanning..</string>
</resources>
