<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".ProductActivity">

    <TextView
        android:id="@+id/page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_new_product"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/product_name_label"
        style="@style/AuthOutlinedBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8dp"
        android:gravity="bottom"
        app:errorEnabled="false"
        app:errorTextAppearance="@style/error_appearance"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/product_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:inputType="text"
            android:lines="1"
            android:minHeight="40dp"
            android:textColorHint="@color/colorPrimaryDark" />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageButton
        android:id="@+id/ingredient_scan_button"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/scan_note_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Scan the ingredients from the product to auto fill"
        android:textSize="14sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/product_ingredient_label"
        style="@style/AuthOutlinedBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8dp"
        android:gravity="bottom"
        app:errorEnabled="false"
        app:errorTextAppearance="@style/error_appearance"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/product_ingredient_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingredients"
            android:inputType="text"
            android:isScrollContainer="true"
            android:maxHeight="200dp"
            android:textColorHint="@color/colorPrimaryDark" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/add_update_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:background="@drawable/blue_background_drawable"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/placeholder_btn_setup_allergy_profile"
        android:textColor="@android:color/white" />


</LinearLayout>