<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/user_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginVertical="20dp"
                android:padding="10dp"
                android:src="@drawable/user_avatar_default"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:placeholderImage="@drawable/user_avatar_default"
                app:roundAsCircle="true"
                fresco:roundBottomEnd="false"
                fresco:roundBottomStart="false"
                fresco:roundWithOverlayColor="@android:color/transparent"
                fresco:roundedCornerRadius="5dp"
                fresco:roundingBorderColor="@android:color/black"
                fresco:roundingBorderWidth="1dp" />

            <TextView
                android:id="@+id/user_status_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/placeholder_login_status"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_avatar" />


            <TextView
                android:id="@+id/add_allergen_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/blue_background_drawable"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/placeholder_btn_setup_allergy_profile"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/signout_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_status_tv" />


            <TextView
                android:id="@+id/signout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/red_background_drawable"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/pleceholder_sign_out"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_allergen_button" />

            <TextView
                android:id="@+id/signin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/green_background_drawable"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/placeholder_sign_in"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_allergen_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>